# cognitive

./: README.md  docker-compose.prod.yml  docker-compose.yml  requerimientos.txt
backend/: Dockerfile  pyproject.toml  requerimientos.txt  requirements.txt  run.py  wsgi.py
backend/flask_l414/: __init__.py  app.py  config.py  models.py
backend/flask_l414/auth/: routes.py
backend/flask_l414/categories/: routes.py
backend/flask_l414/components/: routes.py
backend/flask_l414/healthchecks/: routes.py
backend/flask_l414/models/: Base.py  Category.py  Component.py  Transaction.py  User.py
backend/flask_l414/transaction_items/: routes.py
backend/flask_l414/transactions/: routes.py
backend/flask_l414/users/: routes.py
backend/src/: app.py  category.py  component.py  config.py  transaction.py
backend/src/db/entities/: Base.py  Category.py
database/: Dockerfile  db.sql
frontend/: .jsconfig.json  Dockerfile  README.md  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: index.js  index.tsx
frontend/src/api/: axios.js  defaultQueryFn.js  queryClient .js
frontend/src/components/App/: App.js  App.tsx  LoginPage.tsx  routes.tsx
frontend/src/components/Badge/: Badge.js
frontend/src/components/Card/: Card.js  CardBody.js  CardFooter.js  CardHeader.js
frontend/src/components/CustomButtons/: Button.js
frontend/src/components/Footer/: Footer.js
frontend/src/helpers/: accessToken.js  accessToken.ts  authProvider.ts  dataProvider.ts  myFormatRelative.ts  theme.ts  useCartStore.ts
src/: app.py  user.py
(+87 files in other folders)
